##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = menus

bases = \
	languages.toml \
	params.toml

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk

copyfiles = \
	markup.toml    \
	security.toml

include $(top_srcdir)/build-aux/copy.mk
