##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = about commands content-management contribute   \
	functions getting-started hosting-and-deployment \
	hugo-modules hugo-pipes installation maintenance \
	methods myshowcase news quick-reference render-hooks \
	showcase templates tools troubleshooting

bases = \
	_index.md        \
	documentation.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk

copyfiles = \
	featured.png

include $(top_srcdir)/build-aux/copy.mk
