##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	_index.md         \
	benefits.md       \
	features.md       \
	hugo-and-gdpr.md  \
	license.md        \
	security-model.md \
	what-is-hugo.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
