##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	hugo.md                       \
	hugo_completion.md            \
	hugo_completion_bash.md       \
	hugo_completion_fish.md       \
	hugo_completion_powershell.md \
	hugo_completion_zsh.md        \
	hugo_config.md                \
	hugo_config_mounts.md         \
	hugo_convert.md               \
	hugo_convert_toJSON.md        \
	hugo_convert_toTOML.md        \
	hugo_convert_toYAML.md        \
	hugo_deploy.md                \
	hugo_env.md                   \
	hugo_gen.md                   \
	hugo_gen_chromastyles.md      \
	hugo_gen_doc.md               \
	hugo_gen_man.md               \
	hugo_import.md                \
	hugo_import_jekyll.md         \
	hugo_list.md                  \
	hugo_list_all.md              \
	hugo_list_drafts.md           \
	hugo_list_expired.md          \
	hugo_list_future.md           \
	hugo_list_published.md        \
	hugo_mod.md                   \
	hugo_mod_clean.md             \
	hugo_mod_get.md               \
	hugo_mod_graph.md             \
	hugo_mod_init.md              \
	hugo_mod_npm.md               \
	hugo_mod_npm_pack.md          \
	hugo_mod_tidy.md              \
	hugo_mod_vendor.md            \
	hugo_mod_verify.md            \
	hugo_new.md                   \
	hugo_new_content.md           \
	hugo_new_site.md              \
	hugo_new_theme.md             \
	hugo_server.md                \
	hugo_server_trust.md          \
	hugo_version.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
