##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common image-processing organization

bases = \
	_index.md              \
	archetypes.md          \
	build-options.md       \
	comments.md            \
	content-adapters.md    \
	cross-references.md    \
	data-sources.md        \
	diagrams.md            \
	formats.md             \
	front-matter.md        \
	markdown-attributes.md \
	mathematics.md         \
	menus.md               \
	multilingual.md        \
	page-bundles.md        \
	page-resources.md      \
	related.md             \
	sections.md            \
	shortcodes.md          \
	static-files.md        \
	summaries.md           \
	syntax-highlighting.md \
	taxonomies.md          \
	types.md               \
	urls.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
