##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common cast collections compare crypto data debug   \
	diagrams encoding fmt global go-template hugo images   \
	inflect js lang math openapi3 os partials path reflect \
	resources safe strings templates time transform urls

bases = \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
