##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = external-learning-resources

bases = \
	_index.md               \
	configuration-markup.md \
	configuration.md        \
	directory-structure.md  \
	glossary.md             \
	quick-start.md          \
	usage.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
