##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = hosting-on-github hosting-on-netlify

bases = \
	_index.md                           \
	deployment-with-rclone.md           \
	deployment-with-rsync.md            \
	hosting-on-21yunbox.md              \
	hosting-on-aws-amplify.md           \
	hosting-on-azure-static-web-apps.md \
	hosting-on-cloudflare-pages.md      \
	hosting-on-firebase.md              \
	hosting-on-gitlab.md                \
	hosting-on-keycdn.md                \
	hosting-on-render.md                \
	hugo-deploy.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
