##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = 1password-support alora-labs ampio-help      \
	bypasscensorship digitalgov fireship forestry  \
	godot-tutorials hapticmedia hartwell-insurance \
	keycdn letsencrypt linode overmindstudios      \
	pharmaseal quiply-employee-communications-app  \
	template tomango
