##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = lists

bases = \
	404.md                   \
	_index.md                \
	base.md                  \
	embedded.md              \
	homepage.md              \
	introduction.md          \
	lookup-order.md          \
	menu-templates.md        \
	output-formats.md        \
	pagination.md            \
	partials.md              \
	robots.md                \
	rss.md                   \
	section-templates.md     \
	shortcode-templates.md   \
	single-page-templates.md \
	sitemap-template.md      \
	taxonomy-templates.md    \
	views.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
