##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	_index.md                   \
	glob-patterns.md            \
	go-html-template-package.md \
	locales.md                  \
	regular-expressions.md      \
	time-layout-string.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
