##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	After.md         \
	Append.md        \
	Apply.md         \
	Complement.md    \
	Delimit.md       \
	Dictionary.md    \
	First.md         \
	Group.md         \
	In.md            \
	IndexFunction.md \
	Intersect.md     \
	IsSet.md         \
	KeyVals.md       \
	Last.md          \
	Merge.md         \
	NewScratch.md    \
	Querify.md       \
	Reverse.md       \
	Seq.md           \
	Shuffle.md       \
	Slice.md         \
	Sort.md          \
	SymDiff.md       \
	Union.md         \
	Uniq.md          \
	Where.md         \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
