##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	Conditional.md \
	Default.md     \
	Eq.md          \
	Ge.md          \
	Gt.md          \
	Le.md          \
	Lt.md          \
	Ne.md          \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
