##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common

bases = \
	Errorf.md   \
	Erroridf.md \
	Print.md    \
	Printf.md   \
	Println.md  \
	Warnf.md    \
	Warnidf.md  \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
