##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common

bases = \
	_index.md   \
	and.md      \
	block.md    \
	break.md    \
	continue.md \
	define.md   \
	else.md     \
	end.md      \
	if.md       \
	len.md      \
	not.md      \
	or.md       \
	range.md    \
	return.md   \
	template.md \
	urlquery.md \
	with.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
