##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	BuildDate.md      \
	CommitHash.md     \
	Deps.md           \
	Environment.md    \
	Generator.md      \
	GoVersion.md      \
	IsDevelopment.md  \
	IsExtended.md     \
	IsMultihost.md    \
	IsMultilingual.md \
	IsProduction.md   \
	IsServer.md       \
	Version.md        \
	WorkingDir.md     \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
