##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common

bases = \
	AutoOrient.md   \
	Brightness.md   \
	ColorBalance.md \
	Colorize.md     \
	Config.md       \
	Contrast.md     \
	Dither.md       \
	Filter.md       \
	Gamma.md        \
	GaussianBlur.md \
	Grayscale.md    \
	Hue.md          \
	Invert.md       \
	Opacity.md      \
	Overlay.md      \
	Padding.md      \
	Pixelate.md     \
	Process.md      \
	Saturation.md   \
	Sepia.md        \
	Sigmoid.md      \
	Text.md         \
	UnsharpMask.md  \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
