##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	FormatAccounting.md   \
	FormatCurrency.md     \
	FormatNumber.md       \
	FormatNumberCustom.md \
	FormatPercent.md      \
	Merge.md              \
	Translate.md          \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
