##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	Abs.md     \
	Add.md     \
	Ceil.md    \
	Counter.md \
	Div.md     \
	Floor.md   \
	Log.md     \
	Max.md     \
	Min.md     \
	Mod.md     \
	ModBool.md \
	Mul.md     \
	Pow.md     \
	Product.md \
	Rand.md    \
	Round.md   \
	Sqrt.md    \
	Sub.md     \
	Sum.md     \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
