##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	Chomp.md            \
	Contains.md         \
	ContainsAny.md      \
	ContainsNonSpace.md \
	Count.md            \
	CountRunes.md       \
	CountWords.md       \
	FindRESubmatch.md   \
	FindRe.md           \
	FirstUpper.md       \
	HasPrefix.md        \
	HasSuffix.md        \
	Repeat.md           \
	Replace.md          \
	ReplaceRE.md        \
	RuneCount.md        \
	SliceString.md      \
	Split.md            \
	Substr.md           \
	Title.md            \
	ToLower.md          \
	ToUpper.md          \
	Trim.md             \
	TrimLeft.md         \
	TrimPrefix.md       \
	TrimRight.md        \
	TrimSuffix.md       \
	Truncate.md         \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
