##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common

bases = \
	AsTime.md        \
	Duration.md      \
	Format.md        \
	Now.md           \
	ParseDuration.md \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
