##
## This is part of Japanese translation version for Hugo Documantation.
##

bases = \
	CanHighlight.md       \
	Emojify.md            \
	HTMLEscape.md         \
	HTMLUnescape.md       \
	Highlight.md          \
	HighlightCodeBlock.md \
	Markdownify.md        \
	Plainify.md           \
	Remarshal.md          \
	Unmarshal.md          \
	XMLEscape.md          \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
