##
## This is part of Japanese translation version for Hugo Documantation.
##

SUBDIRS = _common

bases = \
	AbsLangURL.md \
	AbsURL.md     \
	Anchorize.md  \
	JoinPath.md   \
	Parse.md      \
	Ref.md        \
	RelLangURL.md \
	RelRef.md     \
	RelURL.md     \
	URLize.md     \
	_index.md

include $(top_srcdir)/build-aux/common.mk
include $(top_srcdir)/build-aux/content.mk
